--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.1.2",
