--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@reduxjs/toolkit": "^2.8.2",
+    "@schedule-x/calendar": "^3.1.0",
+    "@schedule-x/events-service": "^3.1.0",
+    "@schedule-x/react": "^3.1.0",
+    "@schedule-x/theme-default": "^3.1.0",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -48,6 +52,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "temporal-polyfill": "^0.3.0",
     "zod": "^4.1.5"
   },
   "devDependencies": {
