--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\""
   },
   "dependencies": {
+    "@daypilot/daypilot-lite-react": "^4.5.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -32,10 +33,21 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@reduxjs/toolkit": "^2.8.2",
-    "@schedule-x/calendar": "^3.1.0",
-    "@schedule-x/events-service": "^3.1.0",
+    "@schedule-x/calendar": "^3.1.2",
+    "@schedule-x/drag-and-drop": "^3.1.2",
+    "@schedule-x/event-modal": "^3.1.2",
+    "@schedule-x/events-service": "^3.1.2",
     "@schedule-x/react": "^3.1.0",
-    "@schedule-x/theme-default": "^3.1.0",
+    "@schedule-x/resize": "^3.1.2",
+    "@schedule-x/theme-default": "^3.1.2",
+    "@syncfusion/ej2-base": "^31.1.20",
+    "@syncfusion/ej2-react-buttons": "^31.1.17",
+    "@syncfusion/ej2-react-calendars": "^31.1.20",
+    "@syncfusion/ej2-react-dropdowns": "^31.1.20",
+    "@syncfusion/ej2-react-inputs": "^31.1.20",
+    "@syncfusion/ej2-react-navigations": "^31.1.20",
+    "@syncfusion/ej2-react-schedule": "^31.1.20",
+    "@syncfusion/ej2-react-splitbuttons": "^31.1.17",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -44,6 +56,7 @@
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
+    "react-big-schedule": "^5.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
@@ -59,8 +72,8 @@
     "@eslint/js": "^9.30.1",
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^24.0.13",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.30.1",
